feat: exclude build assets themes during active development

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 /public/build
 /public/hot
 /public/storage
+# Exclude build assets themes during active development
+/public/themes
 /storage/*.key
 /storage/pail
 /vendor
