refactor: rename default app locale with 2 code country

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ APP_KEY=
 APP_DEBUG=false
 APP_TIMEZONE=Asia/Jakarta
 APP_URL=http://billmora.test
-APP_LOCALE=en
+APP_LOCALE=en_UK
 
 # Database Settings
 DB_CONNECTION=mariadb
